syntax = "proto3";

package io.mystore.order.action;

import "akkaserverless/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/mystore/shipping/entity/ship_order_entity.proto";

option java_outer_classname = "ShipOrderToOrderActionService";

service ShipOrderToOrder {
  option (akkaserverless.codegen) = {
    action: {}
  };

  rpc OnOrderShipped(shipping.entity.OrderShipped) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "ship_order"
    };
  }

  rpc OnOrderSkuShipped(shipping.entity.OrderSkuShipped) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "ship_order"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "ship_order"
    };
  }
}
